--- a/clientes/templates/clientes/home_cliente.html
+++ b/clientes/templates/clientes/home_cliente.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <section>    
-    <a href="{% url 'lista_cliente' %}" class="sou_cliente">Sou cliente</a>
+    <a href="{% url 'busca_cliente' %}" class="sou_cliente">Sou cliente</a>
     <a href="" class="sou_cliente">Empréstimos</a>
     <a href="" class="sou_cliente">Abra sua conta</a>
 </section>
