--- a/clientes/templates/componentes/header.html
+++ b/clientes/templates/componentes/header.html
@@ -2,7 +2,15 @@
 <section class='bar_um'>
     <h1><a href="{% url 'home_banco' %}">Banco Senac</a></h1>
 </section>
-<section class='bar_dois'></section>
+<section class='bar_dois'>
+    {% if request.session.nome_cliente %}
+        <p>
+            Seja Bem  Vindo! 
+            {{ request.session.nome_cliente }} {{  request.session.sobrenome_cliente }}
+            <a href="">Sair</a>        
+        </p>
+    {% endif %}
+</section>
 <section>
     <img class="banner" src="{% static 'img/banner01.jpg' %}" alt="">
 </section>
